# zgw-office-addin

./: .dockerignore  .env.example  .gitignore  .licenserc.yaml  .nvmrc  CONTEXT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  WARP.md  ca.example.cnf  codecov.yml  docker-compose.e2e.yml  docker-compose.yml  docker.yml  generate-keys-backend.sh  generate-keys.sh  index.yaml  justfile  kind-config.yaml  package-lock.json  package.json  renovate.json  server.example.cnf  setup-dev-local.sh  setup-direct-browser.sh  test-helm-local.sh  test-k8s-probes.sh  test-values.yaml  tsconfig.json  turbo.json  vitest.config.ts
.ct/: chart_schema.yaml  lintconf.yaml
.github/: CODEOWNERS
docs/: REACT_IMPROVEMENTS.md
e2e/: .prettierignore  .prettierrc.js  package.json  playwright.config.ts  tsconfig.json
llm-relay/: Dockerfile  README.md  pyproject.toml
llm-relay/src/llm_relay/: config.py  extractor.py  main.py  models.py  service.py
llm-relay/tests/: __init__.py  conftest.py  test_extractor.py  test_generate.py  test_health.py  test_service.py
office-add-in/: .env.frontend.example  .env.local.frontend  .env.local.frontend.example  .prettierrc.js  Dockerfile  WEBPACK_OPTIMIZATION.md  audit.sarif  entrypoint.sh  entrypoint.test.sh  eslint.config.mjs  manifest-office.xml  manifest-outlook.xml  manifest.xml  nginx.conf  nginx.conf.template  nginx.https.template  package-lock.json  package.json  tsconfig.json  vitest.config.ts  webpack.config.js
office-backend/: .eslintrc.json  .prettierignore  .prettierrc.js  Dockerfile  cert.pem  entrypoint.sh  esbuild.config.js  (+7 more)
(+237 files in other folders)
